--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,247 @@
-*{
-    list-style-type: none;
+h1, h2, h3, h4, h5, h6, p{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+img {
+    display: block;
+}
+
+ul,
+ol {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+a {
     text-decoration: none;
 }
-body{
+
+address {
+    font-style: normal;
+}
+
+body {
     background-color: #fff;
+    font-family: "Open Sans", sans-serif;
+color: #303030;
+
+}
+.container{
+        width: 1600px;
+            margin: 0 auto;
+}
+.header-container{
+    display: flex;
+    align-items: center;
+    width: 953px;
+    margin-left: 415px;
+    background-color: #2c2c2c;
+}
+/* -------buttons css----- */
+.btn {
+    cursor: pointer;
+    background-color: transparent;
+    min-width: 160px;
+    height: 40px;
+    border: 1px solid #ff6c00;
+    border-radius: 25px;
+    font-weight: 600;
+    font-size: 12px;
+    letter-spacing: 0.09em;
+    text-transform: uppercase;
+    text-align: center;
+}
+.btn-white {
+    color: #303030;
+}
+.btn-grey {
+    margin-top: 42px;
+    color: #fff;
+}
+.btn:hover,
+.btn:focus {
+    border: 1px solid #ff6c00;
+    background: #ff6c00;
+    color: #fff;
+}
+/* -------buttons css----- */
+
+
+.site-nav-block{
+    display: flex;
+    gap: 30px;
+    margin: 52px 0 0;
+}
+
+.site-nav-item{
+    font-weight: 600;
+    font-size: 12px;
+    letter-spacing: 0.1em;
+    color: #fff;
+
+}
+
+.site-nav-item:focus,
+.site-nav-item:hover{
+        color: #ff6c00;
+}
+
+.container-hero{
+    width: 1170px;
+    background-color: rgb(106, 101, 200);
+    margin-left: 215px;
+}
+
+/* ---- about---- */
+
+.about-container{
+    display: flex;
+    margin: 120px auto 0px;
+    justify-content: center;
+}
+.about-photo-block{
+display: flex;
+margin-right: 30px;
+gap: 30px;
+}
+.wrap-text-about{
+width: 470px;
+}
+.sec-about-p-one{
+    padding-left: 80px;
+    font-weight: 600;
+    font-size: 11px;
+    text-transform: uppercase;
+    color: #303030;
+}
+.sec-about-p-one::before {
+    content: "|" ;
+width: 1px;
+    height: 60px;
+    background: #303030;
+        transform: rotate(-90deg);
+}
+.header{
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 42px;
+    letter-spacing: 0.05em;
+}
+.about-header{
+    margin-top: 20px;
+    color: #303030;
+}
+
+.wrap-text-header{
+    margin-top: 20px;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 1.66667;
+        letter-spacing: 0.02em;
+        color: #555;
+}
+.sec-about-p-two{
+margin-top: 20px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.85714;
+        letter-spacing: 0.02em;
+        color: #555;
+}
+
+
+
+.btn-about{
+        display: block;
+    margin-top: 42px;
+}
+/* ------section-price */
+.price-container{
+margin: 120px auto 0;
+min-height: 629px;
+border: 1px solid #303030;
+background: #111319;
+}
+.text-block{
+padding-top: 120px;
+padding-left: 215px;
+}
+
+.wrap-text{
+        font-weight: 600;
+        font-size: 11px;
+        text-transform: uppercase;
+        color: rgba(157, 164, 189, 0.6);
+}
+
+.price-header{
+    color: #fff;
+padding-left: 209px;
+    margin-top: 20px;
+
+}
+.price-block {
+    margin-top: 44px;
+    margin-left: 215px;
+    display: flex;
+    gap: 30px;
+}
+
+.left-price-block {
+    padding-top: 30px;
+    padding-left: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 570px;
+    height: 240px;
+    background: linear-gradient(180deg, #171a24 0%, #171a24 100%);
+
+}
+.right-price-block {
+    padding-top: 30px;
+        padding-left: 20px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        width: 570px;
+        height: 240px;
+    background: linear-gradient(180deg, #090b13 0%, #090b13 100%);
+}
+.price-item {
+
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 1.67;
+        letter-spacing: 0.02em;
+        color: #9da4bd;
+}
+.btn-price{
+    display: block;
+margin: 44px auto 120px;
+}
+
+/* ---------- */
+.container-people{
+    width: 1170px;
+    min-height: 571px;
+    margin: 0 auto;
+display: flex;
+gap: 130px;
+}
+
+/* ---------- */
+.container-barbers {
+    min-height: 870px;
+    margin: 0 auto;
+}
+/* ------------empty-block */
+.empty-block{
+    margin-top: 100px;
+    width: 1600px;
+    height: 800px;
+    background-color: #9da4bd;
+
 }
